_sass/modules/song.sass
/* Audio Player

.song
  position: relative
  display: flex
  flex-wrap: wrap
  justify-content: center
  max-width: 900px
  margin: 32px auto


  +e( 'cover-art' )
    flex: 0 0 128px
    height: 128px


  +e( 'content' )
    position: relative
    flex: 1 1 100%
    margin-top: 16px


  // Header
  +e( 'header' )
    margin-left: 16px


  +e( 'header-title' )
    margin-top: 0
    margin-bottom: 0
    line-height: 1


  +e( 'header-album' )
    line-height: 1.9


  +e( 'header-date' )
    line-height: 1.9


  // Player Controls
  +e( 'controls' )
    display: flex
    flex-wrap: wrap
    margin-left: 16px


  // Progress Bar
  +e( 'progress' )
    position: relative

    flex: 0 1 100%


  +e( 'tracker' )
    position: absolute
    top: calc( 50% - 1px )
    left: 1px
    z-index: 1

    width: 100%
    height: 4px

    background-color: $color-red
    pointer-events: none
    transform: translateY( -50% ) scaleX( 0 )
    transform-origin: left


  +e( 'slider' )
    width: 100%
    margin: 0
    padding-top: 16px
    padding-bottom: 16px

    // Fix for FF unable to apply focus style bug
    border: 1px solid $color-white
    cursor: pointer
    outline: none
    // Removes default webkit styles
    -webkit-appearance: none

    // WebKit
    &::-webkit-slider-runnable-track
      width: 100%
      height: 4px
      background: $color-black
      border: none
      border-radius: 5px

    &::-webkit-slider-thumb
      width: 16px
      height: 16px
      margin-top: -6px

      -webkit-appearance: none
      border-radius: 50%
      background: $color-red


    // Mozilla
    &::-moz-range-track
      width: 100%
      height: 4px

      background: $color-black
      border: none
      border-radius: 5px

    &::-moz-range-thumb
      width: 16px
      height: 16px

      background: $color-red
      border: none
      border-radius: 50%

    // Hide outline behind border
    &:-moz-focusring
      outline: 1px solid $color-white
      outline-offset: -1px


    // Microsoft (Warning: hacks)
    &::-ms-track
      width: 100%
      height: 4px

      // Remove bg colour from the track
      // Use ms-fill-lower and ms-fill-upper instead
      background: transparent
      // Leave room for the larger thumb
      // to overflow with a transparent border
      border-color: transparent
      border-width: 6px 0
      // Remove default tick marks
      color: transparent

    &::-ms-fill-lower
      background: $color-black
      border-radius: 5px

    &::-ms-fill-upper
      background: $color-black
      border-radius: 5px

    &::-ms-thumb
      width: 16px
      height: 16px

      border: none
      border-radius: 50%
      background: $color-red


  // PlayPause
  +e( 'button' )
    flex: 0 0 64px
    padding: 0 16px

    background-color: transparent
    border: none
    cursor: pointer
    outline: none


  // Volume
  +e( 'volume' )
    position: relative

    flex: 0 0 128px
    margin-left: 16px

    cursor: pointer


  +e( 'volume-icon' )
    flex: 0 0 32px


  +e( 'volume-tracker' )
    position: absolute
    top: 50%
    left: 32px
    z-index: 1

    width: 96px
    height: 4px

    background-color: $color-green
    pointer-events: none
    transform: translateY( -50% ) scaleX( .1 )
    transform-origin: left


  +e( 'volume-slider' )
    position: absolute
    top: 50%
    left: 32px

    width: 96px
    margin: 0
    padding: 0

    // Fix for FF unable to apply focus style bug
    border: 1px solid $color-white
    cursor: pointer
    outline: none
    transform: translateY( -50% )
    // Removes default webkit styles
    -webkit-appearance: none

    // WebKit
    &::-webkit-slider-runnable-track
      width: 100%
      height: 4px
      background: $color-black
      border: none
      border-radius: 5px

    &::-webkit-slider-thumb
      width: 16px
      height: 16px
      margin-top: -6px

      -webkit-appearance: none
      border-radius: 50%
      background-color: $color-green


    // Mozilla
    &::-moz-range-track
      width: 100%
      height: 4px

      background-color: $color-black
      border: none
      border-radius: 5px

    &::-moz-range-thumb
      width: 16px
      height: 16px

      background-color: $color-green
      border: none
      border-radius: 50%

    // Hide outline behind border
    &:-moz-focusring
      outline: 1px solid $color-white
      outline-offset: -1px


    // Microsoft (Warning: hacks)
    &::-ms-track
      width: 100%
      height: 4px

      // Remove bg colour from the track
      // Use ms-fill-lower and ms-fill-upper instead
      background: transparent
      // Leave room for the larger thumb
      // to overflow with a transparent border
      border-color: transparent
      border-width: 6px 0
      // Remove default tick marks
      color: transparent

    &::-ms-fill-lower
      background-color: $color-black
      border-radius: 5px

    &::-ms-fill-upper
      background-color: $color-black
      border-radius: 5px

    &::-ms-thumb
      width: 16px
      height: 16px

      border: none
      border-radius: 50%
      background-color: $color-green



@media only screen and ( min-width: 640px )
  .song
    flex-wrap: nowrap

    +e( 'content' )
      margin-top: 0

